# routes/cart.ts
@@ -4,9 +4,9 @@ import auth from "../middleware/auth";
 import validation from "../validation/validation";
 const router = express.Router();
 
-router.post("/product/:id/addtocart",auth,validation.addToCartValidation,cartController.addToCart)
+router.post("/:id",auth,validation.addToCartValidation,cartController.addToCart)
 
-router.get("/viewcart",auth,cartController.viewCart)
+router.get("/",auth,cartController.viewCart)
 
-router.delete("/viewcart/:id/remove",auth,cartController.removeFromCart);
+router.delete("/:id",auth,cartController.removeFromCart);
 export default router;
