# routes/product.ts
@@ -4,12 +4,12 @@ import productController from '../controllers/product';
 import validation from '../validation/validation';
 const router = express.Router();
 
-router.post("/addproduct", auth, validation.addProductValidation,productController.addProduct);
+router.post("/", auth, validation.addProductValidation,productController.addProduct);
 
-router.get("/product",auth,productController.showAllProduct)
+router.get("/",auth,productController.showAllProduct)
 
-router.get("/product/:id",auth,productController.showOneProduct);
+router.get("/:id",auth,productController.showOneProduct);
 
-router.delete("/product/:id/delete",auth,productController.deleteProduct)
+router.delete("/:id",auth,productController.deleteProduct)
 
 export default router;
